fix: add how-to section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,20 @@
 	</head>
 	<body x-data="" :class="$store.global.bodyClasses">
 		<h1>GW2 Meta Planner</h1>
+		<div class="howto">
+			<h2>How to Use</h2>
+			<ul>
+				<li>Grid begins at daily reset, times are shown in your local time.</li>
+				<li>
+					Add additional routes for backup events or compare multiple plans
+				</li>
+				<li>Your routes are saved across page loads</li>
+				<li>
+					Adjust your own estimates based on how quickly your group can complete
+					each event
+				</li>
+			</ul>
+		</div>
 		<main>
 			<div x-data="gw2MetaPlanner">
 				<header>
