fix: add favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 			content="initial-scale=1.0, width=device-width, height=device-height, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
 		/>
 		<title>GW2 Meta Planner</title>
+		<link rel="icon" href="ancient-scroll.png" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
