chore: update copy in how-to

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div class="howto">
 			<h2>How to Use</h2>
 			<ul>
-				<li>Grid begins at daily reset, times are shown in your local time.</li>
+				<li>Grid begins at daily reset, times are shown in your local time</li>
 				<li>
 					Add additional routes for backup events or compare multiple plans
 				</li>
