--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 										<template x-for="meta in metas">
 											<option
 												:value="meta.id"
-												x-text="`${meta.name} (max ${meta.max}m)`"
+												x-text="`${meta.group}: ${meta.name} (max ${meta.max}m)`"
 											></option>
 										</template>
 									</optgroup>
