fix(meta): update reset button to reset offset and duration

--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
 															<button
 																class="icon-button"
 																@click="resetMetaEstimate(i, index, meta.avg)"
-																aria-label="reset time estimate to average"
-																title="Reset time estimate to average"
+																aria-label="reset offset and estimate to default"
+																title="Reset offset and estimate to default"
 															>
 																<span class="material-symbols-outlined sm"
 																	>history</span
