--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 													class="meta"
 													:data-release="meta.release"
 													x-data="{meta: prepareRouteMeta(m)}"
-													:style="{gridRowStart: generateRowNumberFromTime(meta.time, m.offset), gridRowEnd: `span ${generateRowNumberFromMinutes(m.duration)}`}"
+													:style="{gridRowStart: generateRowNumberFromTime(m.time, m.offset), gridRowEnd: `span ${generateRowNumberFromMinutes(m.duration)}`}"
 												>
 													<p
 														class="title"
@@ -235,7 +235,7 @@
 													<p
 														class="time desc material-icon-before"
 														icon-name="schedule"
-														x-text="getLocalTime(meta.time)"
+														x-text="getLocalTime(m.time)"
 														:title="`Durations: \nMin: ${meta.min}m \nAvg: ${meta.avg}m \nMax: ${meta.max}m`"
 													></p>
 													<p
