--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 		</script>
 		<script type="module" src="script.js"></script>
 	</head>
-	<body x-data="" :class="$store.global.bodyClasses">
+	<body x-data="" class="loading" :class="$store.global.bodyClasses">
 		<h1>GW2 Meta Planner</h1>
 		<div class="howto">
 			<h2>How to Use</h2>
