docs: add notes about time definitions and new offset feature

--- a/index.html
+++ b/index.html
@@ -30,14 +30,32 @@
 		<div class="howto">
 			<h2>How to Use</h2>
 			<ul>
-				<li>Grid begins at daily reset, times are shown in your local time</li>
+				<li>Grid begins at daily reset, times are shown in your local time.</li>
 				<li>
-					Add additional routes for backup events or compare multiple plans
+					Add additional routes for backup events or compare multiple plans.
 				</li>
-				<li>Your routes are saved across page loads</li>
+				<li>Your routes and settings are saved across page loads.</li>
+				<li>
+					Use the <em>Estimate</em> and <em>Offset</em> options for each event
+					in your route to fine-tune events that might overwise overlap.
+				</li>
 				<li>
 					Adjust your own estimates based on how quickly your group can complete
-					each event
+					each event. Definitions of the provided times:
+					<ul>
+						<li>
+							<strong>Minimum</strong>: large pre-made squad with boons doing
+							high DPS.
+						</li>
+						<li>
+							<strong>Average</strong>: regular map or a small pre-made squad
+							mixed with randoms.
+						</li>
+						<li>
+							<strong>Maximum</strong>: hard limit of the event, usually timers
+							on the event chain that cause the event to fail if they run out.
+						</li>
+					</ul>
 				</li>
 			</ul>
 		</div>
