docs: clarify that import will overwrite existing routes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
 						</li>
 						<li>
 							<strong>Import</strong>: Paste in a generated text string and hit
-							"Import" to set up a previously saved route.
+							"Import" to set up previously saved routes (note it will replace
+							any existing routes).
 						</li>
 					</ol>
 				</li>
